tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_accept.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
y

^D🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m1[0m[33m command:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'test command'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
🔄 [36mRunning post-create:[0m
[40m [0m  [1m[34mecho[0m [32m'test command'[0m[0m
[0mtest command
✅ [32mCreated new worktree for [1m[32mtest-approve[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO]/test-repo.test-approve[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell[0m
