tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
n

^D🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m2[0m[33m commands:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'First command'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Third command'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
⚪ Commands declined, continuing worktree creation
✅ [32mCreated new worktree for [1m[32mtest-mixed-decline[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO]/test-repo.test-mixed-decline[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell[0m
